Fixes on diseases and department controllers
